--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title></title>
     </head>
     <body>
-        <p>Il prezzo del biglietto è: <span id="costobiglietto"></span></p>
+        <p>Il prezzo del biglietto è: <span id="costobiglietto"></span><br> e lo sconto è di: <span id="sconto"></span></p>
+        <p>totale costo biglietto: <span id="totale"></span></p>
 
         <script src="function.js" charset="utf-8"></script>
     </body>
